# twitterclone

./: README.md  pyproject.toml
authentication/: forms.py  views.py
notification/: admin.py  models.py  organizer.py
notification/migrations/: 0001_initial.py
templates/: base.html  generic_form.html  index.html  notifications.html  tweets.html  userprofile.html
tweet/: admin.py  forms.py  models.py  organizer.py  views.py
tweet/migrations/: 0001_initial.py
twitterclone/: settings.py  urls.py
twitteruser/: admin.py  forms.py  models.py  views.py
twitteruser/migrations/: 0001_initial.py
